Добавляет header на все страницы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -52,7 +52,7 @@
       </div>
 
       <div class="page-header__title-wrapper page-header__title-wrapper">
-        <h1 class="page-header__title">Фотографии пользователей</h1>
+        <h1 class="page-header__title">Фотографии<br>пользователей</h1>
       </div>
 
     </header>
