--- a/source/index.html
+++ b/source/index.html
@@ -55,7 +55,7 @@
 
       <h1 class="visually-hidden">Мобильное приложение Pink раскрасит серые будни</h1>
 
-      <div class="page-header__title-wrapper">
+      <div class="page-header__title-wrapper page-header__title-wrapper--index">
         <p class="page-header__title page-header__title page-header__title--index">Взгляните на жизнь иначе!</p>
       </div>
 
