--- a/source/index.html
+++ b/source/index.html
@@ -111,7 +111,7 @@
 
         <div class="benefits__intro benefits-intro">
           <p class="benefits-intro__text">Устали от серости мегаполиса?</p>
-          <p class="benefits-intro__text">Нам есть, что вам предложить!</p>
+          <p class="benefits-intro__text">Нам есть, что вам<br>предложить!</p>
         </div>
 
         <h2 class="visually-hidden">Преимущества мобильного приложения Pink</h2>
@@ -126,7 +126,7 @@
 
             <li class="benefits__item">
               <h3 class="benefits__title">Меняет мир вокруг</h3>
-              <p class="benefits__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+              <p class="benefits__description">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить&nbsp;эффект</p>
             </li>
 
             <li class="benefits__item">
