--- a/source/index.html
+++ b/source/index.html
@@ -143,7 +143,7 @@
 
         <div class="effectiveness__wrapper">
           <h2 class="effectiveness__title">Эффект на 24 часа!</h2>
-          <p class="effectiveness__description">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+          <p class="effectiveness__description">Британские ученые провели исследования и&nbsp;доказали, что&nbsp;положительный эффект от&nbsp;использования приложения длится целые&nbsp;сутки!</p>
           <a class="effectiveness__link" href="#">Узнать больше об исследовании</a>
         </div>
 
