--- a/source/index.html
+++ b/source/index.html
@@ -205,7 +205,7 @@
                   <span class="head-cell__rate">База</span>
                   <span class="head-cell__price">1,99&nbsp;USD</span>
                 </th>
-                <th class="table__head-cell table__head-cell--hit head-cell">
+                <th class="table__head-cell table__head-cell head-cell head-cell--hit">
                   <span class="head-cell__rate">СТАНДАРТ</span>
                   <span class="head-cell__price">3,99&nbsp;USD</span>
                 </th>
