--- a/source/index.html
+++ b/source/index.html
@@ -319,10 +319,11 @@
         <div class="contacts__wrapper">
 
         <h2 class="visually-hidden">Контакты</h2>
-        <p class="contacts__title">Остались вопросы? Свяжитесь с нами!</p>
+        <p class="contacts__title">Остались вопросы?<br>Свяжитесь с нами!</p>
 
         <dl class="contacts__list">
 
+          <div class="contacts__item-wrapper">
           <div class="contacts__item contacts__item--phone">
             <dt class="contacts__item-term">Звоните:</dt>
             <dd class="contacts__item-description">
@@ -336,11 +337,12 @@
               <a class="contacts__item-link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
             </dd>
           </div>
+          </div>
 
           <div class="contacts__item contacts__item--address">
             <dt class="contacts__item-term">Приезжайте в гости:</dt>
             <dd class="contacts__item-description">
-              <address class="contacts__item-address">ул. Большая Конюшенная, 19/8</address>
+              <address class="contacts__item-address">ул. Большая<br>Конюшенная, 19/8</address>
             </dd>
           </div>
 
@@ -350,7 +352,7 @@
 
         <div class="contacts__map map-wrapper">
 
-          <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac90c23b9869659eba078a702b8b4db6935e817cda240a0b9cd12c52b11177ff5&amp;width=100%25&amp;height=200&amp;lang=ru_RU&amp;scroll=true"></script>
+          <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac90c23b9869659eba078a702b8b4db6935e817cda240a0b9cd12c52b11177ff5&amp;width=100%25&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
 
         </div>
 
