--- a/source/form.html
+++ b/source/form.html
@@ -260,7 +260,7 @@
     <div class="modal modal--fault modal--accept">
 
       <div class="modal__content-wrapper modal__content-wrapper--fault">
-      <p class="modal__title">Что-то пошло не так!</p>
+      <p class="modal__title">Что-то пошло не&nbsp;так!</p>
       <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
       </div>
 
@@ -278,7 +278,7 @@
       </div>
 
       <div class="modal__button-wrapper modal__button-wrapper--accept">
-        <button class="modal__button form-button submit-button" type="button">ЗАКРЫТЬ ОКНО</button>
+        <button class="modal__button modal__button--accept form-button submit-button" type="button">ЗАКРЫТЬ ОКНО</button>
       </div>
 
     </div>
