:heavy_check_mark: Сборка #5

--- a/5/index.html
+++ b/5/index.html
@@ -322,38 +322,36 @@
         <h2 class="visually-hidden">Контакты</h2>
         <p class="contacts__title">Остались вопросы?<br>Свяжитесь с нами!</p>
 
-        <dl class="contacts__list">
+        <ul class="contacts__list site-list">
 
-          <div class="contacts__item-wrapper">
-          <div class="contacts__item contacts__item--phone">
-            <dt class="contacts__item-term">Звоните:</dt>
-            <dd class="contacts__item-description">
+          <li class="contacts__item contacts__item--phone">
+            <p class="contacts__item-term">Звоните:</p>
+            <p class="contacts__item-description">
               <a class="contacts__item-link" href="tel:+78125556666">+7 (812) 555-66-66</a>
-            </dd>
-          </div>
+            </p>
+          </li>
 
-          <div class="contacts__item contacts__item--email">
-            <dt class="contacts__item-term">Пишите:</dt>
-            <dd class="contacts__item-description">
+          <li class="contacts__item contacts__item--email">
+            <p class="contacts__item-term">Пишите:</p>
+            <p class="contacts__item-description">
               <a class="contacts__item-link" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-            </dd>
-          </div>
-          </div>
+            </p>
+          </li>
 
-          <div class="contacts__item contacts__item--address">
-            <dt class="contacts__item-term">Приезжайте в гости:</dt>
-            <dd class="contacts__item-description">
+          <li class="contacts__item contacts__item--address">
+            <p class="contacts__item-term">Приезжайте в гости:</p>
+            <div class="contacts__item-description">
               <address class="contacts__item-address">ул. Большая<br>Конюшенная, 19/8</address>
-            </dd>
-          </div>
+            </div>
+          </li>
 
-        </dl>
+        </ul>
 
         </div>
 
         <div class="contacts__map map-wrapper">
 
-          <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac90c23b9869659eba078a702b8b4db6935e817cda240a0b9cd12c52b11177ff5&amp;width=100%25&amp;height=100%&amp;lang=ru_RU&amp;scroll=true"></script>
+          <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac90c23b9869659eba078a702b8b4db6935e817cda240a0b9cd12c52b11177ff5&amp;width=320&amp;height=200&amp;lang=ru_RU&amp;scroll=true"></script>
 
         </div>
 
