--- a/source/index.html
+++ b/source/index.html
@@ -353,9 +353,9 @@
 
         </div>
 
-        <div class="contacts__map map-wrapper">
+        <div class="contacts__map-wrapper">
 
-          <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac90c23b9869659eba078a702b8b4db6935e817cda240a0b9cd12c52b11177ff5&amp;width=320&amp;height=200&amp;lang=ru_RU&amp;scroll=true"></script>
+          <script class="contacts__map" type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac90c23b9869659eba078a702b8b4db6935e817cda240a0b9cd12c52b11177ff5&amp;lang=ru_RU&amp;scroll=true"></script>
 
         </div>
 
