Добавляет позиционирование модальных окон

--- a/source/form.html
+++ b/source/form.html
@@ -262,7 +262,7 @@
 
     </footer>
 
-    <div class="modal modal--fault modal--accept">
+    <div class="modal modal--fault">
 
       <div class="modal__content-wrapper modal__content-wrapper--fault">
       <p class="modal__title">Что-то пошло не&nbsp;так!</p>
