Добавляет кастомные чекбоксы и радиокнопки

--- a/source/form.html
+++ b/source/form.html
@@ -102,34 +102,46 @@
             <legend class="form-legend form-legend--achievements">Ваши безбашенные достижения&nbsp;в&nbsp;путешествии</legend>
 
             <ul class="achievements__list site-list">
-              <li class="achievements__item">
-                <input class="achievements__input visually-hidden" type="checkbox" id="selfie" name="shark-selfie" checked>
-                <label class="achievements__label check-label" for="selfie">Сделал селфи с акулой</label>
+              <li class="achievements__item shark-selfie">
+                <label class="achievements__label check-label control" for="selfie">
+                  <input class="visually-hidden achievements__input control__input" type="checkbox" id="selfie" name="shark-selfie" checked>
+                  <span class="control__mark control__mark--checkbox"></span>
+                  Сделал селфи с акулой</label>
               </li>
 
-              <li class="achievements__item">
-                <input class="achievements__input visually-hidden" type="checkbox" id="burned" name="beach-burned" checked>
-                <label class="achievements__label check-label" for="burned">Обгорел на пляже</label>
+              <li class="achievements__item beach-burned">
+                <label class="achievements__label check-label control" for="burned">
+                  <input class="visually-hidden achievements__input control__input" type="checkbox" id="burned" name="beach-burned" checked>
+                  <span class="control__mark control__mark--checkbox"></span>
+                  Обгорел на пляже</label>
               </li>
 
-              <li class="achievements__item">
-                <input class="achievements__input visually-hidden" type="checkbox" id="norris" name="meet-norris">
-                <label class="achievements__label check-label" for="norris">Видел Чака Норриса</label>
+              <li class="achievements__item meet-norris">
+                <label class="achievements__label check-label control" for="norris">
+                  <input class="visually-hidden achievements__input control__input" type="checkbox" id="norris" name="meet-norris">
+                  <span class="control__mark control__mark--checkbox"></span>
+                  Видел Чака Норриса</label>
               </li>
 
-              <li class="achievements__item">
-                <input class="achievements__input visually-hidden" type="checkbox" id="souvenirs" name="get-souvenirs">
-                <label class="achievements__label check-label" for="souvenirs">Накупил сувениров</label>
+              <li class="achievements__item get-souvenirs">
+                <label class="achievements__label check-label control" for="souvenirs">
+                  <input class="visually-hidden achievements__input control__input" type="checkbox" id="souvenirs" name="get-souvenirs">
+                  <span class="control__mark control__mark--checkbox"></span>
+                  Накупил сувениров</label>
               </li>
 
-              <li class="achievements__item">
-                <input class="achievements__input visually-hidden" type="checkbox" id="tower" name="hold-tower" checked>
-                <label class="achievements__label check-label" for="tower">Удержал башню</label>
+              <li class="achievements__item hold-tower">
+                <label class="achievements__label check-label control" for="tower">
+                  <input class="visually-hidden achievements__input control__input" type="checkbox" id="tower" name="hold-tower" checked>
+                  <span class="control__mark control__mark--checkbox"></span>
+                  Удержал башню</label>
               </li>
 
-              <li class="achievements__item">
-                <input class="achievements__input visually-hidden" type="checkbox" id="pogrom" name="hotel-pogrom">
-                <label class="achievements__label check-label" for="pogrom">Разгромил отель</label>
+              <li class="achievements__item hotel-pogrom">
+                <label class="achievements__label check-label control" for="pogrom">
+                  <input class="visually-hidden achievements__input control__input" type="checkbox" id="pogrom" name="hotel-pogrom">
+                  <span class="control__mark control__mark--checkbox"></span>
+                  Разгромил отель</label>
               </li>
             </ul>
 
@@ -161,18 +173,24 @@
 
             <ul class="platform__list site-list">
               <li class="platform__item">
-                <input class="platform__input visually-hidden" type="radio" id="ios" name="platform" value="ios" checked>
-                <label class="platform__label check-label" for="ios">Pink для iOS</label>
+                <label class="platform__label check-label control" for="ios">
+                  <input class="visually-hidden platform__input control__input" type="radio" id="ios" name="platform" value="ios" checked>
+                  <span class="control__mark control__mark--radio"></span>
+                  Pink для iOS</label>
               </li>
 
               <li class="platform__item">
-                <input class="platform__input visually-hidden" type="radio" id="android" name="platform" value="android">
-                <label class="platform__label check-label" for="android">Pink на Android</label>
+                <label class="platform__label check-label control" for="android">
+                  <input class="visually-hidden platform__input control__input" type="radio" id="android" name="platform" value="android">
+                  <span class="control__mark control__mark--radio"></span>
+                  Pink на Android</label>
               </li>
 
               <li class="platform__item">
-                <input class="platform__input visually-hidden" type="radio" id="windows" name="platform" value="windows-phone">
-                <label class="platform__label check-label" for="windows">Windows Phone</label>
+                <label class="platform__label check-label control" for="windows">
+                  <input class="visually-hidden platform__input control__input" type="radio" id="windows" name="platform" value="windows-phone">
+                  <span class="control__mark control__mark--radio"></span>
+                  Windows Phone</label>
               </li>
             </ul>
 
