Добавляет фоновые изображения

--- a/source/index.html
+++ b/source/index.html
@@ -71,7 +71,7 @@
 
           <ul class="apps__list site-list">
 
-            <li class="apps__item">
+            <li class="apps__item apps__item-apple">
               <a class="apps__link" href="https://www.apple.com/ru/app-store/">
                 <span class="visually-hidden">iOS</span>
                 <svg width="47" height="56" viewBox="0 0 47 56" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -122,6 +122,7 @@
         <h2 class="visually-hidden">Преимущества мобильного приложения Pink</h2>
 
         <div class="benefits__wrapper">
+          <div class="benefits__background-wrapper">
           <ul class="benefits__list site-list">
 
             <li class="benefits__item">
@@ -140,6 +141,7 @@
             </li>
 
           </ul>
+          </div>
         </div>
 
       </section>
