--- a/source/catalog.html
+++ b/source/catalog.html
@@ -159,7 +159,7 @@
 
                   <source media="(min-width: 660px)" srcset="img/gallery/drum-set-tablet.jpg 1x, img/gallery/drum-set-tablet@2x.jpg 2x">
 
-                  <img class="photo__image" src="img/gallery/drum-set-mobile.jpg" srcset= "img/gallery/drum-set-mobile@2x.jpg x2" alt="Ударная установка.">
+                  <img class="photo__image" src="img/gallery/drum-set-mobile.jpg" srcset= "img/gallery/drum-set-mobile@2x.jpg 2x" alt="Ударная установка.">
 
                 </picture>
 
@@ -194,7 +194,7 @@
 
                   <source media="(min-width: 660px)" srcset="img/gallery/glass-roof-tablet.jpg 1x, img/gallery/glass-roof-tablet@2x.jpg 2x">
 
-                  <img class="photo__image" src="img/gallery/glass-roof-mobile.jpg" srcset="img/gallery/glass-roof-mobile@2x.jpg x2" alt="Стеклянная крыша.">
+                  <img class="photo__image" src="img/gallery/glass-roof-mobile.jpg" srcset="img/gallery/glass-roof-mobile@2x.jpg 2x" alt="Стеклянная крыша.">
 
                 </picture>
 
@@ -229,7 +229,7 @@
 
                   <source media="(min-width: 660px)" srcset="img/gallery/melon-field-tablet.jpg 1x, img/gallery/melon-field-tablet@2x.jpg 2x">
 
-                  <img class="photo__image" src="img/gallery/melon-field-mobile.jpg" srcset="img/gallery/melon-field-mobile@2x.jpg x2" alt="Кубанская бахча.">
+                  <img class="photo__image" src="img/gallery/melon-field-mobile.jpg" srcset="img/gallery/melon-field-mobile@2x.jpg 2x" alt="Кубанская бахча.">
 
                 </picture>
 
@@ -264,7 +264,7 @@
 
                   <source media="(min-width: 660px)" srcset="img/gallery/legs-tablet.jpg 1x, img/gallery/legs-tablet@2x.jpg 2x">
 
-                  <img class="photo__image" src="img/gallery/legs-mobile.jpg" srcset="img/gallery/legs-mobile@2x.jpg x2" alt="Голые ноги на горе.">
+                  <img class="photo__image" src="img/gallery/legs-mobile.jpg" srcset="img/gallery/legs-mobile@2x.jpg 2x" alt="Голые ноги на горе.">
 
                 </picture>
 
@@ -299,7 +299,7 @@
 
                   <source media="(min-width: 660px)" srcset="img/gallery/aircraft-wing-tablet.jpg 1x, img/gallery/aircraft-wing-tablet@2x.jpg 2x">
 
-                  <img class="photo__image" src="img/gallery/aircraft-wing-mobile.jpg" srcset="img/gallery/aircraft-wing-mobile@2x.jpg x2" alt="Крыло самолёта в полёте.">
+                  <img class="photo__image" src="img/gallery/aircraft-wing-mobile.jpg" srcset="img/gallery/aircraft-wing-mobile@2x.jpg 2x" alt="Крыло самолёта в полёте.">
 
                 </picture>
 
@@ -345,7 +345,7 @@
 
                 <source media="(min-width: 660px)" srcset="img/gallery/photo-editor.jpg 1x, img/gallery/photo-editor@2x.jpg 2x">
 
-                <img class="form-photo__image" src="img/gallery/photo-editor-mobile.jpg" srcset="img/gallery/photo-editor-mobile@2x.jpg x2" alt="Для редактирования.">
+                <img class="form-photo__image" src="img/gallery/photo-editor-mobile.jpg" srcset="img/gallery/photo-editor-mobile@2x.jpg 2x" alt="Для редактирования.">
 
               </picture>
 
